<resources>
    <string name="app_name">SIMBANK</string>
    <string name="email_input_text">Email</string>
    <string name="password_input_text">Password</string>
    <string name="nickname_input_text">Password</string>
    <string name="login_text">Inicia sesión y disfruta!</string>
    <string name="login_button_text">Inicia sesión!</string>
    <string name="login_to_register_text">No estás registrado? <u>Regístrate</u></string>
    <string name="register_text">Únete a nosotros!</string>
    <string name="register_button_text">Regístrate</string>
    <string name="register_to_login_text">Ya tienes una cuenta? <u>Inicia sesión</u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_subtitle">Aprende a manejar tu dinero y sal al mundo real con las ideas bien claras</string>
    <string name="login_sign_in">¿Todavía no tienes cuenta? Regístrate</string>
    <string name="login_button_loggin">INICIAR SESIÓN</string>
    <string name="login_hint_password">Contraseña</string>
    <string name="login_hint_user">Usuario o correo</string>
    <string name="login_error_mail">El email no es válido</string>
    <string name="login_error_password">Debe contener al menos 6 caracteres</string>
    <string name="login_footer_unselected">¿Todavía no tienes cuenta?</string>
    <string name="login_footer_selected">Regístrate</string>
    <string name="login_error_dialog_title">No hemos encontrado el usuario</string>
    <string name="login_error_dialog_body">Verifique los datos o vuelva a intentarlo</string>
    <string name="login_error_dialog_negative_action">Cancelar</string>
    <string name="login_error_dialog_positive_action">Reintentar</string>
    <string name="login_forgot_password">¿Contraseña olvidada?</string>
    <string name="login_remember">Recuérdame</string>
    <string name="introduction_button_signin">Crear cuenta</string>
    <string name="signin_form_real_name">Nombre completo</string>
    <string name="signin_form_nickname">Nombre público de usuario</string>
    <string name="signin_form_email">Correo electrónico</string>
    <string name="signin_form_password">Contraseña</string>
    <string name="signin_form_repeat_password">Repetir contraseña</string>
    <string name="signin_error_mail">El email no es válido</string>
    <string name="signin_error_nickname">Debe contener al menos 6 caracteres</string>
    <string name="signin_error_realname">Debe contener al menos 6 caracteres</string>
    <string name="signin_error_password">Las 2 contraseñas deben coincidir</string>
    <string name="signin_footer_unselected">¿Ya tienes cuenta?</string>
    <string name="signin_footer_selected">Inicia sesión</string>
    <string name="signin_error_dialog_title">Ha ocurrido un error</string>
    <string name="signin_error_dialog_body">No hemos podido crear tu cuenta, inténtalo de nuevo más tarde</string>
    <string name="signin_error_dialog_positive_action">Okey :(</string>
    <string name="verification_button_go_to_login">Ahora inicia sesión!</string>
    <string name="verification_check_mail">Para acceder a la aplicación verifica tu correo electrónico (recuerda mirar en SPAM).</string>
    <string name="emails_not_matach">Los 2 correos deben coincidir</string>
    <string name="dialog_verified_title">¡Registro completado!</string>
    <string name="dialog_verified_body">Ahora inicia sesión i disfruta de SimBank</string>
    <string name="dialog_verified_positive">¡Adelante!</string>
    <string name="dialog_complete_register_body">Ahora sigue con los últimos pasos y disfruta de SimBank</string>
    <string name="feature_not_allowed">Feature no solicitada :)</string>
    <string name="signin_button_createaccount">Crear mi cuenta</string>
    <string name="accounts_title">CUENTAS</string>
    <string name="go_to_gastos">Ir a gastos e ingresos</string>
    <string name="account_disponible">Disponible</string>
    <string name="last_movements">Últimos movimientos</string>
    <string name="see_more">Ver más</string>
    <string name="toolbar_functions">Funciones</string>
    <string name="toolbar_cards">Tarjetas</string>
    <string name="toolbar_profile">Perfil</string>
    <string name="toolbar_add_card">Contratar tarjeta</string>
    <string name="toolbar_info_card">Detalles de la tarjeta</string>
    <string name="toolbar_update_password">Actualizar la contraseña</string>
    <string name="toolbar_update_email">Actualizar el email</string>
    <string name="toolbar_update_phone">Actualizar el teléfono</string>
    <string name="toolbar_update_name">Actualizar el titular</string>
    <string name="toolbar_transfer">Transferencia</string>
    <string name="toolbar_realize_transfer">Realizar una transferencia</string>
    <string name="toolbar_transfer_resume">Resumen de la transferencia</string>
    <string name="toolbar_account_transfer_detail">Detalle de la transferencia</string>
    <string name="toolbar_bizum">Realizar bizum</string>
    <string name="toolbar_bizum_form">Bizum</string>
    <string name="toolbar_send_bizum">Enviar bizum</string>
    <string name="toolbar_request_bizum">Solicitar bizum</string>
    <string name="toolbar_add_manually">Añadir manualmente</string>
    <string name="toolbar_add_from_agenda">Añadir desde agenda</string>
    <string name="toolbar_bizum_resume">Resumen del bizum</string>
    <string name="toolbar_bizum_detail">Detalle del bizum</string>
    <string name="toolbar_account">Cuenta</string>
    <string name="toolbar_info_account">Información de la cuenta</string>
    <string name="toolbar_search_movements">Buscar movimientos</string>
    <string name="toolbar_movements_list">Lista de movimientos</string>
    <string name="toolbar_missions">Misiones</string>
    <string name="toolbar_contacts">Contactos</string>
    <string name="toolbar_add_contact">Añadir un contacto</string>
    <string name="toolbar_contact_profile">Perfil del contacto</string>
    <string name="toolbar_blocked_contacts">Contactos bloqueados</string>
    <string name="toolbar_notifications">Notificaciones</string>
    <string name="toolbar_contact_request">Solicitud de amistad</string>
    <string name="toolbar_settings">Ajustes</string>
    <string name="toolbar_credit_card">Targeta de crédito</string>
    <string name="toolbar_debit_card">Targeta de débito</string>
    <string name="toolbar_prepaid_card">Targeta prepago</string>
    <string name="toolbar_promotions">Promociones</string>
    <string name="toolbar_privacy_policy">Politica de privacidad</string>
    <string name="dialog_error_oops">¡Vaya!</string>
    <string name="dialog_error_sure">¿Estas seguro de que quieres cerrar sesión?</string>
    <string name="dialog_error_yes">Sí</string>
    <string name="dialog_error_no">No</string>
    <string name="dialog_error_help">Ayuda</string>
    <string name="dialog_closed_session">Sesión cerrada</string>
    <string name="dialog_logout_help">Estas apunto de cerrar tu sesion, necesitarás volver a iniciar sesión</string>
    <string name="dialog_error_careful">¡Cuidado!</string>
    <string name="dialog_question_sure">¿Estas seguro de que quieres borrar la tarjeta?</string>
    <string name="dialog_question_help_text">Si realizas la acción, la tarjeta se borrará permanentemente</string>
    <string name="dialog_question_yes">Sí</string>
    <string name="dialog_question_no">No</string>
    <string name="dialog_question_help">Ayuda</string>
    <string name="dialog_bizum_sure">¿Estás seguro de que quieres deshacer la acción?</string>
    <string name="dialog_bizum_help_text">Si lo haces, se cancelará la transacción</string>
    <string name="welcomeSimBank">¡Bienvenido a SIMBANK!</string>
    <string name="step_info_1">En esta aplicacion aprenderas a moverte y conocer los principios basicos sobre una cuenta bancaria</string>
    <string name="step_info_3">También obtendrás conocimiento para saber que diferencias hay entre los tipos de targeta de banco, que es un iban, acciones de banco, etc.. lo demás lo tendras que averiguar tú !</string>
    <string name="step_info_2">Te explicaremos todo lo que necesitas saber y en los posibles peligros que conlleva el dinero</string>
    <string name="info_step_money">Esta aplicación no usa dinero real, no te preocupes por encargos o perdidas</string>
    <string name="introduce_password">Introduce tu contraseña actual</string>
    <string name="change">Cambiar</string>
    <string name="password">Contraseña</string>
    <string name="password_not_match">La contraseña introducida no coincide con la actual</string>
    <string name="password_actual">La contraseña que has introducido es la actual</string>
    <string name="try_again">Volver a intentar</string>
    <string name="cancel">Cancelar</string>
    <string name="next">SIGUIENTE</string>
    <string name="back">Atrás</string>
    <string name="email_changed">¡Correo electrónico actualizado!</string>
    <string name="go_to_verify_account">¡Le hemos enviado un correo electrónico para que lo verifique!</string>
    <string name="btn_verify">¡Verificar!</string>
    <string name="verification_completed">¡Verificación completada!</string>
    <string name="go_to_navigate">¡Ya puedes seguir navegando por Sim Bank!</string>
    <string name="minim_three_characters">Debe contener al menos 3 carácteres</string>
    <string name="phone_no_valid">El teléfono no es válido</string>
    <string name="dialog_delete_account_sure">Estas seguro que quieres eliminar tu cuenta?</string>
    <string name="dialog_delete_account_help">Si borras la cuenta, no podrás volver a entrar y perderás todos tus progresos</string>
    <string name="dialog_deleted_account">Cuenta eliminada</string>
    <string name="alias_not_correct">Debe contener al menos 4 caracteres</string>
    <string name="pin_not_correct">Debe contener 4 caracteres</string>
    <string name="origen">ORIGEN</string>
    <string name="disponible">Disponible</string>
    <string name="destiny">DESTINO</string>
    <string name="new_addressee">Nuevo destinatario</string>
    <string name="iban">IBAN</string>
    <string name="beneficiary_name">Nombre del beneficiario</string>
    <string name="continue_mayus">CONTINUAR</string>
    <string name="importe_mayus">IMPORTE</string>
    <string name="importe">Importe</string>
    <string name="minim">Mín.</string>
    <string name="maxim">- Máx.</string>
    <string name="minim_maxim">Mínimo 0,01. - Máximo 10.000,00€</string>
    <string name="minim_bizum">0,50€</string>
    <string name="maxim_bizum">500,00€</string>
    <string name="datos_adicionales">DATOS ADICIONALES</string>
    <string name="asunto_opcional">Asunto (opcional)</string>
    <string name="finalizar">FINALIZAR</string>
    <string name="modify">Modificar</string>
    <string name="send">Enviar</string>
    <string name="request">Solicitar</string>
    <string name="remove">Eliminar</string>
    <string name="import_and_concept">Importe y concepto</string>
    <string name="import_every_destiny">Importe (a cada destinatario)</string>
    <string name="addressess">DESTINATARIO</string>
    <string name="_35_characters">35 caracteres</string>
    <string name="add_manually">Añadir manualmente</string>
    <string name="maximum_10_addresses">Puedes añadir un máximo de 10 destinatarios</string>
    <string name="confirm_phone">Confirmar teléfono móvil</string>
    <string name="phone_number">Número de movil</string>
    <string name="add_addresse">Añadir destinatario</string>
    <string name="optional_search">Buscar (opcional)</string>
    <string name="total_sended">Total del envío: </string>
    <string name="date">Fecha</string>
    <string name="text">Texto</string>
    <string name="type">Tipo</string>
    <string name="date_picker"><b><i>22/03/2023</i></b></string>
    <string name="search">Buscar</string>
    <string name="pick_date">Selecciona una fecha</string>
    <string name="since">Desde</string>
    <string name="until">Hasta</string>
</resources>